--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,11 @@
 	<groupId>AIS_Test</groupId>
 	<artifactId>AIS_Test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<dependencies>
+	<properties>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
+	</properties>
+    <dependencies>
 		<!--
 		https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
